<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/tasklistFragment"
            android:title="@string/nav_tasks" />
        <item
            android:id="@+id/nav_calc"
            android:title="@string/nav_calc" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_notification"
            android:title="@string/nav_notification" />
        <item
            android:id="@+id/nav_news"
            android:title="@string/nav_news" />
        <item
            android:id="@+id/nav_search"
            android:title="@string/nav_search" />
        <item
            android:id="@+id/nav_tutorial"
            android:title="@string/nav_tutorial" />
        <item
            android:id="@+id/nav_exit"
            android:title="@string/nav_exit" />
    </group>

</menu>