<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="view"
            type="android.view.View" />

        <variable
            name="viewModel"
            type="com.cdek.courier.ui.start.auth.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/flLogoLang"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHeight_percent="0.3">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/logo_cdek"
                android:layout_gravity="center"
                android:clickable="true"
                android:onClick="@{() -> viewModel.countClick()}" />

            <TextView
                android:id="@+id/tvLang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ru"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_gravity="top|end" />

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/editTextLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewModel.login}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flLogoLang"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:hint="@string/input_login" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:text="@={viewModel.password}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextLogin"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:hint="@string/input_pass" />

        <TextView
            android:id="@+id/textViewGetServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_server"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            android:layout_marginStart="@dimen/dp_20"
            android:visibility="@{viewModel.showSpinner.get() ? view.VISIBLE : view.GONE}" />

        <Spinner
            android:id="@+id/spinnerServer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewGetServer"
            android:layout_marginStart="@dimen/dp_20"
            android:entries="@array/server_list"
            android:onItemSelected="@{viewModel::onSelectServer}"
            android:visibility="@{viewModel.showSpinner.get() ? view.VISIBLE : view.GONE}"></Spinner>

        <Button
            android:id="@+id/buttonEnter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:background="@drawable/border_rounded_button"
            android:layout_marginTop="@dimen/dp_20"
            android:onClick="@{() -> viewModel.login()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerServer" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>